fix Multiple status task filter select z-index, remove  Project heading duplicate , delete fakeData

--- a/src/components/ListProjects/Filter.scss
+++ b/src/components/ListProjects/Filter.scss
@@ -9,6 +9,7 @@
       height: 80px;
       padding: 0 20px;
       border-radius: 2px;
+      margin-top: 40px;
       .projectFilter__option {
          display: flex;
          align-items: center;
