--- a/src/components/MultipleSelect/index.scss
+++ b/src/components/MultipleSelect/index.scss
@@ -36,7 +36,7 @@
       width: 220px;
       background-color: $background;
       box-shadow: $box-shadow;
-      z-index: 99;
+      z-index: 999;
       padding: 10px;
 
       .multipleSelect__item {
